group in accorddion each URL results

--- a/views/index.pug
+++ b/views/index.pug
@@ -21,84 +21,90 @@ html(lang="es")
 
       if report
         h2 Resultado de IMB Accessibility Checker
-        each value in report
-          - for (const result in value)
-            if result == 'nls'
-              p #{result}
-              each value1, key1 in value[result]
-                ul
-                  - for (const property in value1)
-                    li
-                      strong #{property}: 
-                      span= value1[property]
-            else if result == 'summary'
-              p #{result}
-              ul
-                each value1, key1 in value[result].counts
-                  li= key1 + ': ' + value1
-              div
-                strong scanTime: 
-                span= value[result].scanTime
-              div
-                strong ruleArchive: 
-                span= value[result].ruleArchive
-              div
-                strong policies: 
-                ul
-                  each value2 in value[result].policies
-                    li= value2
-              div
-                strong reportLevels: 
-                ul
-                  each value2 in value[result].reportLevels
-                    li= value2
-              div
-                strong startScan: 
-                span= value[result].startScan
-              div
-                strong URL: 
-                a(href=value[result].URL target="_blank") #{value[result].URL}
-            else if result == 'results'
-              div Results:
-              .accordion
-                each result2, key2 in value[result]
-                  .accordion-item
-                    h4(id=`heading-${key2}` class="accordion-header")
-                      button(data-bs-target=`#collapse-${key2}` aria-controls=`collapse-${key2}` type='button' data-bs-toggle='collapse' aria-expanded='false' class="accordion-button collapsed")
-                        span= result2.message
-                    div(id=`collapse-${key2}` aria-labelledby=`heading-${key2}` class="accordion-collapse collapse")
-                      .accordion-body
-                        div
-                          strong ruleId: 
-                          span #{result2.ruleId}
-                        div 
-                          strong value: 
-                          ul
-                            each value in result2.value
-                              li= value
-                        div 
-                          strong path: 
-                          ul
-                            each value, key in result2.path
-                              li= key + ': ' + value
-                        div 
-                          strong ruleTime: 
-                          span #{result2.ruleTime}
-                        div 
-                          strong reasonId: 
-                          span #{result2.reasonId}
-                        div 
-                          strong message: 
-                          span #{result2.message}
-                        div 
-                          strong snippet: 
-                          code #{result2.snippet}
-                        div 
-                          strong category: 
-                          span #{result2.category}
-                        div 
-                          strong level:  
-                          span #{result2.level}
-                        a(href=result2.help target="_blank") help
-            else
-              p #{result}: #{value[result]}
+        each value, key in report
+          .accordion-item
+            h3(id=`heading-${value.scanID}` class="accordion-header")
+              button(data-bs-target=`#collapse-${value.scanID}---${key}` aria-controls=`collapse-${value.scanID}---${key}` type='button' data-bs-toggle='collapse' aria-expanded='false' class="accordion-button collapsed")
+                span #{value.label}
+            div(id=`collapse-${value.scanID}---${key}` aria-labelledby=`heading-${value.scanID}---${key}` class="accordion-collapse collapse")
+              .accordion-body
+                - for (const result in value)
+                  if result == 'nls'
+                    p #{result}
+                    each value1, key1 in value[result]
+                      ul
+                        - for (const property in value1)
+                          li
+                            strong #{property}: 
+                            span= value1[property]
+                  else if result == 'summary'
+                    p #{result}
+                    ul
+                      each value1, key1 in value[result].counts
+                        li= key1 + ': ' + value1
+                    div
+                      strong scanTime: 
+                      span= value[result].scanTime
+                    div
+                      strong ruleArchive: 
+                      span= value[result].ruleArchive
+                    div
+                      strong policies: 
+                      ul
+                        each value2 in value[result].policies
+                          li= value2
+                    div
+                      strong reportLevels: 
+                      ul
+                        each value2 in value[result].reportLevels
+                          li= value2
+                    div
+                      strong startScan: 
+                      span= value[result].startScan
+                    div
+                      strong URL: 
+                      a(href=value[result].URL target="_blank") #{value[result].URL}
+                  else if result == 'results'
+                    div Results:
+                    .accordion
+                      each result2, key2 in value[result]
+                        .accordion-item
+                          h4(id=`heading-${key2}` class="accordion-header")
+                            button(data-bs-target=`#collapse-${key2}` aria-controls=`collapse-${key2}` type='button' data-bs-toggle='collapse' aria-expanded='false' class="accordion-button collapsed")
+                              span= result2.message
+                          div(id=`collapse-${key2}` aria-labelledby=`heading-${key2}` class="accordion-collapse collapse")
+                            .accordion-body
+                              div
+                                strong ruleId: 
+                                span #{result2.ruleId}
+                              div 
+                                strong value: 
+                                ul
+                                  each value in result2.value
+                                    li= value
+                              div 
+                                strong path: 
+                                ul
+                                  each value, key in result2.path
+                                    li= key + ': ' + value
+                              div 
+                                strong ruleTime: 
+                                span #{result2.ruleTime}
+                              div 
+                                strong reasonId: 
+                                span #{result2.reasonId}
+                              div 
+                                strong message: 
+                                span #{result2.message}
+                              div 
+                                strong snippet: 
+                                code #{result2.snippet}
+                              div 
+                                strong category: 
+                                span #{result2.category}
+                              div 
+                                strong level:  
+                                span #{result2.level}
+                              a(href=result2.help target="_blank") help
+                  else
+                    p #{result}: #{value[result]}
